@@ -28,29 +28,25 @@
 package org.hisp.dhis.analytics.table;
 
 import static java.lang.String.join;
-import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.analytics.AnalyticsTableType.TRACKED_ENTITY_INSTANCE;
-import static org.hisp.dhis.analytics.ColumnDataType.BOOLEAN;
-import static org.hisp.dhis.analytics.ColumnDataType.CHARACTER_11;
-import static org.hisp.dhis.analytics.ColumnDataType.DOUBLE;
-import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY;
-import static org.hisp.dhis.analytics.ColumnDataType.INTEGER;
-import static org.hisp.dhis.analytics.ColumnDataType.TEXT;
-import static org.hisp.dhis.analytics.ColumnDataType.TIMESTAMP;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_1200;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_255;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_50;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NOT_NULL;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NULL;
-import static org.hisp.dhis.analytics.IndexType.GIST;
 import static org.hisp.dhis.analytics.table.JdbcEventAnalyticsTableManager.EXPORTABLE_EVENT_STATUSES;
-import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.quote;
+import static org.hisp.dhis.analytics.util.AnalyticsUtils.getColumnType;
 import static org.hisp.dhis.analytics.util.DisplayNameUtils.getDisplayName;
 import static org.hisp.dhis.commons.util.TextUtils.removeLastComma;
-import static org.hisp.dhis.util.DateUtils.getLongDateString;
-import static org.springframework.util.Assert.notNull;
+import static org.hisp.dhis.commons.util.TextUtils.replace;
+import static org.hisp.dhis.db.model.DataType.BOOLEAN;
+import static org.hisp.dhis.db.model.DataType.CHARACTER_11;
+import static org.hisp.dhis.db.model.DataType.DOUBLE;
+import static org.hisp.dhis.db.model.DataType.GEOMETRY;
+import static org.hisp.dhis.db.model.DataType.INTEGER;
+import static org.hisp.dhis.db.model.DataType.TEXT;
+import static org.hisp.dhis.db.model.DataType.TIMESTAMP;
+import static org.hisp.dhis.db.model.DataType.VARCHAR_255;
+import static org.hisp.dhis.db.model.DataType.VARCHAR_50;
+import static org.hisp.dhis.db.model.constraint.Nullable.NOT_NULL;
+import static org.hisp.dhis.db.model.constraint.Nullable.NULL;
+import static org.hisp.dhis.util.DateUtils.toLongDate;
 
 import java.util.ArrayList;
 import java.util.Date;
@@ -59,19 +55,21 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Stream;
 import org.apache.commons.collections4.CollectionUtils;
-import org.hisp.dhis.analytics.AnalyticsExportSettings;
-import org.hisp.dhis.analytics.AnalyticsTable;
-import org.hisp.dhis.analytics.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
-import org.hisp.dhis.analytics.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.AnalyticsTableType;
 import org.hisp.dhis.analytics.AnalyticsTableUpdateParams;
 import org.hisp.dhis.analytics.partition.PartitionManager;
+import org.hisp.dhis.analytics.table.model.AnalyticsTable;
+import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
+import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
+import org.hisp.dhis.analytics.table.setting.AnalyticsTableSettings;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
-import org.hisp.dhis.commons.collection.ListUtils;
+import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
-import org.hisp.dhis.jdbc.StatementBuilder;
+import org.hisp.dhis.db.model.IndexType;
+import org.hisp.dhis.db.model.Logged;
+import org.hisp.dhis.db.sql.SqlBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.period.PeriodDataProvider;
 import org.hisp.dhis.program.Program;
@@ -97,6 +95,73 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
   private final TrackedEntityAttributeService trackedEntityAttributeService;
 
+  private static final List<AnalyticsTableColumn> FIXED_GROUP_BY_COLS =
+      List.of(
+          new AnalyticsTableColumn("trackedentityinstanceuid", CHARACTER_11, NOT_NULL, "tei.uid"),
+          new AnalyticsTableColumn("trackedentityid", INTEGER, NOT_NULL, "tei.trackedentityid"),
+          new AnalyticsTableColumn("created", TIMESTAMP, "tei.created"),
+          new AnalyticsTableColumn("lastupdated", TIMESTAMP, "tei.lastupdated"),
+          new AnalyticsTableColumn("inactive", BOOLEAN, "tei.inactive"),
+          new AnalyticsTableColumn("createdatclient", TIMESTAMP, "tei.createdatclient"),
+          new AnalyticsTableColumn("lastupdatedatclient", TIMESTAMP, "tei.lastupdatedatclient"),
+          new AnalyticsTableColumn("lastsynchronized", TIMESTAMP, "tei.lastsynchronized"),
+          new AnalyticsTableColumn("geometry", GEOMETRY, "tei.geometry", IndexType.GIST),
+          new AnalyticsTableColumn(
+              "longitude",
+              DOUBLE,
+              "case when 'POINT' = GeometryType(tei.geometry) then ST_X(tei.geometry) else null end"),
+          new AnalyticsTableColumn(
+              "latitude",
+              DOUBLE,
+              "case when 'POINT' = GeometryType(tei.geometry) then ST_Y(tei.geometry) else null end"),
+          new AnalyticsTableColumn("featuretype", VARCHAR_255, NULL, "tei.featuretype"),
+          new AnalyticsTableColumn("coordinates", TEXT, NULL, "tei.coordinates"),
+          new AnalyticsTableColumn("storedby", VARCHAR_255, "tei.storedby"),
+          new AnalyticsTableColumn("potentialduplicate", BOOLEAN, NULL, "tei.potentialduplicate"),
+          new AnalyticsTableColumn("uidlevel1", CHARACTER_11, NULL, "ous.uidlevel1"),
+          new AnalyticsTableColumn("uidlevel2", CHARACTER_11, NULL, "ous.uidlevel2"),
+          new AnalyticsTableColumn("uidlevel3", CHARACTER_11, NULL, "ous.uidlevel3"),
+          new AnalyticsTableColumn("uidlevel4", CHARACTER_11, NULL, "ous.uidlevel4"),
+          new AnalyticsTableColumn("ou", CHARACTER_11, NULL, "ou.uid"),
+          new AnalyticsTableColumn("ouname", VARCHAR_255, NULL, "ou.name"),
+          new AnalyticsTableColumn("oucode", VARCHAR_50, NULL, "ou.code"),
+          new AnalyticsTableColumn("oulevel", INTEGER, NULL, "ous.level"));
+
+  private static final List<AnalyticsTableColumn> FIXED_NON_GROUP_BY_COLS =
+      List.of(
+          new AnalyticsTableColumn(
+              "createdbyusername",
+              VARCHAR_255,
+              "tei.createdbyuserinfo ->> 'username' as createdbyusername"),
+          new AnalyticsTableColumn(
+              "createdbyname",
+              VARCHAR_255,
+              "tei.createdbyuserinfo ->> 'firstName' as createdbyname"),
+          new AnalyticsTableColumn(
+              "createdbylastname",
+              VARCHAR_255,
+              "tei.createdbyuserinfo ->> 'surname' as createdbylastname"),
+          new AnalyticsTableColumn(
+              "createdbydisplayname",
+              VARCHAR_255,
+              getDisplayName("createdbyuserinfo", "tei", "createdbydisplayname")),
+          new AnalyticsTableColumn(
+              "lastupdatedbyusername",
+              VARCHAR_255,
+              "tei.lastupdatedbyuserinfo ->> 'username' as lastupdatedbyusername"),
+          new AnalyticsTableColumn(
+              "lastupdatedbyname",
+              VARCHAR_255,
+              "tei.lastupdatedbyuserinfo ->> 'firstName' as lastupdatedbyname"),
+          new AnalyticsTableColumn(
+              "lastupdatedbylastname",
+              VARCHAR_255,
+              "tei.lastupdatedbyuserinfo ->> 'surname' as lastupdatedbylastname"),
+          new AnalyticsTableColumn(
+              "lastupdatedbydisplayname",
+              VARCHAR_255,
+              getDisplayName("lastupdatedbyuserinfo", "tei", "lastupdatedbydisplayname")));
+
   public JdbcTeiAnalyticsTableManager(
       IdentifiableObjectManager idObjectManager,
       OrganisationUnitService organisationUnitService,
@@ -105,14 +170,14 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
       DataApprovalLevelService dataApprovalLevelService,
       ResourceTableService resourceTableService,
       AnalyticsTableHookService tableHookService,
-      StatementBuilder statementBuilder,
       PartitionManager partitionManager,
       DatabaseInfoProvider databaseInfoProvider,
       @Qualifier("analyticsJdbcTemplate") JdbcTemplate jdbcTemplate,
       TrackedEntityTypeService trackedEntityTypeService,
       TrackedEntityAttributeService trackedEntityAttributeService,
-      AnalyticsExportSettings settings,
-      PeriodDataProvider periodDataProvider) {
+      AnalyticsTableSettings analyticsTableSettings,
+      PeriodDataProvider periodDataProvider,
+      SqlBuilder sqlBuilder) {
     super(
         idObjectManager,
         organisationUnitService,
@@ -121,90 +186,15 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
         dataApprovalLevelService,
         resourceTableService,
         tableHookService,
-        statementBuilder,
         partitionManager,
         databaseInfoProvider,
         jdbcTemplate,
-        settings,
-        periodDataProvider);
-
-    notNull(trackedEntityAttributeService, "trackedEntityAttributeService cannot be null");
+        analyticsTableSettings,
+        periodDataProvider,
+        sqlBuilder);
     this.trackedEntityAttributeService = trackedEntityAttributeService;
-
-    notNull(trackedEntityTypeService, "trackedEntityTypeService cannot be null");
     this.trackedEntityTypeService = trackedEntityTypeService;
   }
-
-  private static final List<AnalyticsTableColumn> GROUP_BY_COLS =
-      List.of(
-          new AnalyticsTableColumn(
-              quote("trackedentityid"), INTEGER, NOT_NULL, "tei.trackedentityid"),
-          new AnalyticsTableColumn(
-              quote("trackedentityinstanceuid"), CHARACTER_11, NOT_NULL, "tei.uid"),
-          new AnalyticsTableColumn(quote("created"), TIMESTAMP, "tei.created"),
-          new AnalyticsTableColumn(quote("lastupdated"), TIMESTAMP, "tei.lastupdated"),
-          new AnalyticsTableColumn(quote("inactive"), BOOLEAN, "tei.inactive"),
-          new AnalyticsTableColumn(quote("createdatclient"), TIMESTAMP, "tei.createdatclient"),
-          new AnalyticsTableColumn(
-              quote("lastupdatedatclient"), TIMESTAMP, "tei.lastupdatedatclient"),
-          new AnalyticsTableColumn(quote("lastsynchronized"), TIMESTAMP, "tei.lastsynchronized"),
-          new AnalyticsTableColumn(quote("geometry"), GEOMETRY, "tei.geometry").withIndexType(GIST),
-          new AnalyticsTableColumn(
-              quote("longitude"),
-              DOUBLE,
-              "case when 'POINT' = GeometryType(tei.geometry) then ST_X(tei.geometry) else null end"),
-          new AnalyticsTableColumn(
-              quote("latitude"),
-              DOUBLE,
-              "case when 'POINT' = GeometryType(tei.geometry) then ST_Y(tei.geometry) else null end"),
-          new AnalyticsTableColumn(quote("featuretype"), VARCHAR_255, NULL, "tei.featuretype"),
-          new AnalyticsTableColumn(quote("coordinates"), TEXT, NULL, "tei.coordinates"),
-          new AnalyticsTableColumn(quote("storedby"), VARCHAR_255, "tei.storedby"),
-          new AnalyticsTableColumn(
-              quote("potentialduplicate"), BOOLEAN, NULL, "tei.potentialduplicate"),
-          new AnalyticsTableColumn(quote("uidlevel1"), CHARACTER_11, NULL, "ous.uidlevel1"),
-          new AnalyticsTableColumn(quote("uidlevel2"), CHARACTER_11, NULL, "ous.uidlevel2"),
-          new AnalyticsTableColumn(quote("uidlevel3"), CHARACTER_11, NULL, "ous.uidlevel3"),
-          new AnalyticsTableColumn(quote("uidlevel4"), CHARACTER_11, NULL, "ous.uidlevel4"),
-          new AnalyticsTableColumn(quote("ou"), CHARACTER_11, NULL, "ou.uid"),
-          new AnalyticsTableColumn(quote("ouname"), VARCHAR_255, NULL, "ou.name"),
-          new AnalyticsTableColumn(quote("oucode"), VARCHAR_50, NULL, "ou.code"),
-          new AnalyticsTableColumn(quote("oulevel"), INTEGER, NULL, "ous.level"));
-
-  private static final List<AnalyticsTableColumn> NON_GROUP_BY_COLS =
-      List.of(
-          new AnalyticsTableColumn(
-              quote("createdbyusername"),
-              VARCHAR_255,
-              "tei.createdbyuserinfo ->> 'username' as createdbyusername"),
-          new AnalyticsTableColumn(
-              quote("createdbyname"),
-              VARCHAR_255,
-              "tei.createdbyuserinfo ->> 'firstName' as createdbyname"),
-          new AnalyticsTableColumn(
-              quote("createdbylastname"),
-              VARCHAR_255,
-              "tei.createdbyuserinfo ->> 'surname' as createdbylastname"),
-          new AnalyticsTableColumn(
-              quote("createdbydisplayname"),
-              VARCHAR_255,
-              getDisplayName("createdbyuserinfo", "tei", "createdbydisplayname")),
-          new AnalyticsTableColumn(
-              quote("lastupdatedbyusername"),
-              VARCHAR_255,
-              "tei.lastupdatedbyuserinfo ->> 'username' as lastupdatedbyusername"),
-          new AnalyticsTableColumn(
-              quote("lastupdatedbyname"),
-              VARCHAR_255,
-              "tei.lastupdatedbyuserinfo ->> 'firstName' as lastupdatedbyname"),
-          new AnalyticsTableColumn(
-              quote("lastupdatedbylastname"),
-              VARCHAR_255,
-              "tei.lastupdatedbyuserinfo ->> 'surname' as lastupdatedbylastname"),
-          new AnalyticsTableColumn(
-              quote("lastupdatedbydisplayname"),
-              VARCHAR_255,
-              getDisplayName("lastupdatedbyuserinfo", "tei", "lastupdatedbydisplayname")));
 
   /**
    * Returns the {@link AnalyticsTableType} of analytics table which this manager handles.
@@ -229,11 +219,12 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
     params.addExtraParam("", PROGRAMS_BY_TET_KEY, programsByTetUid);
 
+    Logged logged = analyticsTableSettings.getTableLogged();
+
     return trackedEntityTypeService.getAllTrackedEntityType().stream()
         .map(
             tet ->
-                new AnalyticsTable(
-                    getAnalyticsTableType(), getTableColumns(params, tet), emptyList(), tet))
+                new AnalyticsTable(getAnalyticsTableType(), getColumns(params, tet), logged, tet))
         .toList();
   }
 
@@ -251,12 +242,18 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   }
 
   @SuppressWarnings("unchecked")
-  private List<AnalyticsTableColumn> getTableColumns(
+  private List<AnalyticsTableColumn> getColumns(
       AnalyticsTableUpdateParams params, TrackedEntityType tet) {
     Map<String, List<Program>> programsByTetUid =
         (Map<String, List<Program>>) params.getExtraParam("", PROGRAMS_BY_TET_KEY);
 
     List<AnalyticsTableColumn> columns = new ArrayList<>(getFixedColumns());
+
+    String selectExpression =
+        """
+        \s exists(select 1 from enrollment pi_0 \
+        where pi_0.trackedentityid = tei.trackedentityid \
+        and pi_0.programid = ${programId})""";
 
     // Review this logic, it could result in many columns
     CollectionUtils.emptyIfNull(programsByTetUid.get(tet.getUid()))
@@ -264,13 +261,11 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             program ->
                 columns.add(
                     new AnalyticsTableColumn(
-                        quote(program.getUid()),
+                        program.getUid(),
                         BOOLEAN,
-                        " exists(select 1 from enrollment pi_0"
-                            + " where pi_0.trackedentityid = tei.trackedentityid"
-                            + " and pi_0.programid = "
-                            + program.getId()
-                            + ")")));
+                        replace(
+                            selectExpression,
+                            Map.of("programId", String.valueOf(program.getId()))))));
 
     List<TrackedEntityAttribute> trackedEntityAttributes =
         programsByTetUid.containsKey(tet.getUid())
@@ -288,10 +283,46 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             .map(
                 tea ->
                     new AnalyticsTableColumn(
-                        quote(tea.getUid()), VARCHAR_1200, "\"" + tea.getUid() + "\".value"))
-            .collect(toList()));
+                        tea.getUid(),
+                        getColumnType(tea.getValueType(), isSpatialSupport()),
+                        castBasedOnType(tea.getValueType(), "\"" + tea.getUid() + "\".value")))
+            .toList());
+
+    columns.addAll(getOrganisationUnitGroupSetColumns());
 
     return columns;
+  }
+
+  /**
+   * Returns the select clause, potentially with a cast statement, based on the given value type.
+   * (this method is an adapted version of {@link
+   * JdbcEventAnalyticsTableManager#getSelectClause(ValueType, String)})
+   *
+   * @param valueType the value type to represent as database column type.
+   */
+  private String castBasedOnType(ValueType valueType, String columnName) {
+    if (valueType.isDecimal()) {
+      return replace(" cast(${columnName} as double precision)", Map.of("columnName", columnName));
+    }
+    if (valueType.isInteger()) {
+      return replace(" cast(${columnName} as bigint)", Map.of("columnName", columnName));
+    }
+    if (valueType.isBoolean()) {
+      return replace(
+          " case when ${columnName} = 'true' then 1 when ${columnName} = 'false' then 0 end ",
+          Map.of("columnName", columnName));
+    }
+    if (valueType.isDate()) {
+      return replace(" cast(${columnName} as timestamp)", Map.of("columnName", columnName));
+    }
+    if (valueType.isGeo() && isSpatialSupport()) {
+      return replace(
+          """
+          \s ST_GeomFromGeoJSON('{"type":"Point", "coordinates":' || (${columnName}) || ',
+          "crs":{"type":"name", "properties":{"name":"EPSG:4326"}}}')""",
+          Map.of("columnName", columnName));
+    }
+    return columnName;
   }
 
   private List<TrackedEntityAttribute> getAllTrackedEntityAttributes(
@@ -311,37 +342,22 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   }
 
   /**
-   * Checks if the database content is in valid state for analytics table generation.
-   *
-   * @return null if valid, a descriptive string if invalid.
-   */
-  @Override
-  public String validState() {
-    return null;
-  }
-
-  /**
    * Returns a list of non-dynamic {@link AnalyticsTableColumn}.
    *
    * @return a List of {@link AnalyticsTableColumn}.
    */
-  @Override
-  public List<AnalyticsTableColumn> getFixedColumns() {
-    List<AnalyticsTableColumn> allFixedColumns = new ArrayList<>(GROUP_BY_COLS);
-    allFixedColumns.add(getOrganisationUnitNameHierarchyColumn());
-    allFixedColumns.addAll(NON_GROUP_BY_COLS);
+  private List<AnalyticsTableColumn> getFixedColumns() {
+    List<AnalyticsTableColumn> columns = new ArrayList<>();
+    columns.addAll(FIXED_GROUP_BY_COLS);
+    columns.add(getOrganisationUnitNameHierarchyColumn());
+    columns.addAll(FIXED_NON_GROUP_BY_COLS);
 
-    return allFixedColumns;
+    return columns;
   }
 
-  /**
-   * Returns a list of table checks (constraints) for the given analytics table partition.
-   *
-   * @param partition the {@link AnalyticsTablePartition}.
-   */
   @Override
-  protected List<String> getPartitionChecks(AnalyticsTablePartition partition) {
-    return emptyList();
+  protected List<String> getPartitionChecks(Integer year, Date endDate) {
+    return List.of();
   }
 
   /**
@@ -352,84 +368,67 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
    */
   @Override
   @SuppressWarnings("unchecked")
-  protected void populateTable(
-      AnalyticsTableUpdateParams params, AnalyticsTablePartition partition) {
-    List<AnalyticsTableColumn> columns = partition.getMasterTable().getDimensionColumns();
-    List<AnalyticsTableColumn> values = partition.getMasterTable().getValueColumns();
+  public void populateTable(AnalyticsTableUpdateParams params, AnalyticsTablePartition partition) {
+    String tableName = partition.getName();
 
-    validateDimensionColumns(columns);
+    List<AnalyticsTableColumn> columns = partition.getMasterTable().getAnalyticsTableColumns();
 
-    StringBuilder sql = new StringBuilder("insert into " + partition.getTempTableName() + " (");
+    StringBuilder sql = new StringBuilder("insert into " + tableName + " (");
 
-    for (AnalyticsTableColumn col : ListUtils.union(columns, values)) {
-      if (col.isVirtual()) {
-        continue;
-      }
-
-      sql.append(col.getName() + ",");
+    for (AnalyticsTableColumn col : columns) {
+      sql.append(quote(col.getName()) + ",");
     }
 
     removeLastComma(sql).append(") select ");
 
     for (AnalyticsTableColumn col : columns) {
-      if (col.isVirtual()) {
-        continue;
-      }
-
-      sql.append(col.getAlias() + ",");
+      sql.append(col.getSelectExpression() + ",");
     }
 
     TrackedEntityType trackedEntityType = partition.getMasterTable().getTrackedEntityType();
 
     removeLastComma(sql)
-        .append(" from trackedentity tei")
-        .append(" left join organisationunit ou on tei.organisationunitid = ou.organisationunitid")
         .append(
-            " left join _orgunitstructure ous on ous.organisationunitid = ou.organisationunitid");
+            replace(
+                """
+                \s from trackedentity tei \
+                left join organisationunit ou on tei.organisationunitid = ou.organisationunitid \
+                left join analytics_rs_orgunitstructure ous on ous.organisationunitid = ou.organisationunitid \
+                left join analytics_rs_organisationunitgroupsetstructure ougs on tei.organisationunitid = ougs.organisationunitid \
+                and (cast(${teiCreatedMonth} as date) = ougs.startdate \
+                or ougs.startdate is null)""",
+                Map.of("teiCreatedMonth", sqlBuilder.dateTrunc("month", "tei.created"))));
 
     ((List<TrackedEntityAttribute>)
             params.getExtraParam(trackedEntityType.getUid(), ALL_TET_ATTRIBUTES))
         .forEach(
             tea ->
                 sql.append(
-                    " left join trackedentityattributevalue \""
-                        + tea.getUid()
-                        + "\""
-                        + " on \""
-                        + tea.getUid()
-                        + "\".trackedentityid = tei.trackedentityid"
-                        + " and \""
-                        + tea.getUid()
-                        + "\".trackedentityattributeid = "
-                        + tea.getId()));
+                    replace(
+                        """
+                    \s left join trackedentityattributevalue "${teaUid}" on "${teaUid}".trackedentityid = tei.trackedentityid \
+                    and "${teaUid}".trackedentityattributeid = ${teaId}""",
+                        Map.of(
+                            "teaUid", tea.getUid(),
+                            "teaId", String.valueOf(tea.getId())))));
+    sql.append(
+        replace(
+            """
+            \s where tei.trackedentitytypeid = ${tetId} \
+            and tei.lastupdated < '${startTime}' \
+            and exists (select 1 from enrollment pi \
+            where pi.trackedentityid = tei.trackedentityid \
+            and exists (select 1 from event psi \
+            where psi.enrollmentid = pi.enrollmentid \
+            and psi.status in (${statuses}) \
+            and psi.deleted = false)) \
+            and tei.created is not null \
+            and tei.deleted = false""",
+            Map.of(
+                "tetId", String.valueOf(trackedEntityType.getId()),
+                "startTime", toLongDate(params.getStartTime()),
+                "statuses", join(",", EXPORTABLE_EVENT_STATUSES))));
 
-    sql.append(" where tei.trackedentitytypeid = " + trackedEntityType.getId())
-        .append(" and tei.lastupdated < '" + getLongDateString(params.getStartTime()) + "'")
-        .append(
-            " and exists ( select 1 from enrollment pi"
-                + " where pi.trackedentityid = tei.trackedentityid"
-                + " and exists ( select 1 from event psi"
-                + " where psi.enrollmentid = pi.enrollmentid"
-                + " and psi.status in ("
-                + join(",", EXPORTABLE_EVENT_STATUSES)
-                + ")"
-                + " and psi.deleted is false  ) )")
-        .append(" and tei.created is not null ")
-        .append(" and tei.deleted is false");
-
-    invokeTimeAndLog(sql.toString(), partition.getTempTableName());
-  }
-
-  /**
-   * Indicates whether data was created or updated for the given time range since last successful
-   * "latest" table partition update.
-   *
-   * @param startDate the start date.
-   * @param endDate the end date.
-   * @return true if updated data exists.
-   */
-  @Override
-  protected boolean hasUpdatedLatestData(Date startDate, Date endDate) {
-    return false;
+    invokeTimeAndLog(sql.toString(), "Populating table: '{}'", tableName);
   }
 }
